--- a/index.html
+++ b/index.html
@@ -3,33 +3,111 @@
 
 <head>
     <title>Ацкая машина</title>
-    <link rel="stylesheet" href="../Первый/styles/normalize.css">
+    <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/container.css">
 </head>
 
-<body>
-    <header class="background">
-        <div class="container headerAll">
+<body class="bodyBackground">
+    <header>
+        <div class="headerContainer container">
             <div class="headerLogo">
-                <img src="img/gears-png-file-settings-logo-png-clip-art-library-gear-logo-png-980_970.png" class="headerLogo">
             </div>
             <div class="headerMenu">
-                <button class="">Двигатель</button>
-                <button class="">Внутренности</button>
-                <button class="">Артефакт</button>
+                <button type="button" class="menuBtn">itaque!</button>
+                <button type="button" class="menuBtn">itaque!</button>
+                <button type="button" class="menuBtn">itaque!</button>
             </div>
-            <div class="headerLogIn">
-                <button type="button" class="headerLogIn headerBtn logInBtn">За штурвал!</button>
+            <div class="headerLogin">
+                <button type="button" class="loginBtn menuBtn">4</button>
             </div>
         </div>
     </header>
 
-    <main class="background">
-        <div class="container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+    <main class="mainContainer container">
+        <div class="mainTitle">
+            <h2 class="titleText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure rerum nisi culpa error. Quaerat laborum, reprehenderit accusamus sint a vitae, autem non sapiente, qui ea aliquid. Sequi, ipsum! Dicta, ipsam!</h2>
+        </div>
+        <div class="mainGeneral">
+            <div class="mainMenu">
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+            </div>
+            <div class="mainControl">
+                <div class="controlTabs">
+                    <input class="controlInput">
+                </div>
+                <div class="controlTabs">
+                    <input class="controlInput">
+                </div>
+                <div class="controlTabs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae cum pariatur! Odio dignissimos similique inventore eligendi fugiat, consequuntur voluptatibus voluptatum voluptate modi quis explicabo. Provident quae reiciendis
+                    ab perspiciatis!</div>
+                <div class="controlTabs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae cum pariatur! Odio dignissimos similique inventore eligendi fugiat, consequuntur voluptatibus voluptatum voluptate modi quis explicabo. Provident quae reiciendis
+                    ab perspiciatis!</div>
+                <div class="controlTabs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae cum pariatur! Odio dignissimos similique inventore eligendi fugiat, consequuntur voluptatibus voluptatum voluptate modi quis explicabo. Provident quae reiciendis
+                    ab perspiciatis!</div>
+            </div>
         </div>
     </main>
 
