--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bodyBackground">
     <header>
         <div class="headerContainer container">
-            <div class="headerLogo">
+            <div class="headerLogo logo">
             </div>
             <div class="headerMenu">
                 <button type="button" class="menuBtn">itaque!</button>
@@ -93,14 +93,99 @@
                     <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
                     </span>
                 </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
+                <div class="mainTabs">
+                    <div class="tabsImg">
+                        <!-- тут должна быть фотография товара -->
+                    </div>
+                    <span class="tabsText">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, minus commodi veritatis ipsum facilis, ipsa nam corporis voluptatum, saepe quas facere animi sint rem dolore accusamus cum quod soluta culpa?</span>
+                    </span>
+                </div>
             </div>
             <div class="mainControl">
-                <div class="controlTabs">
-                    <input class="controlInput">
-                </div>
-                <div class="controlTabs">
-                    <input class="controlInput">
-                </div>
+                <form class="controlForm">
+                    <div class="controlTabs">
+                        <input class="controlInput" type="text" id="1" name="cntrlLgn" value="пиши сука логин">
+                    </div>
+                    <div class="controlTabs">
+                        <input class="controlInput" type="password" id="2" name="cntrlPss" value="пиши сука пароль">
+                    </div>
+                    <div class="controlTabs">
+                        <input class="controlInput" type="submit" id="3" name="cntrlBtn" value="нажми сука кнопку">
+                    </div>
+                </form>
                 <div class="controlTabs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae cum pariatur! Odio dignissimos similique inventore eligendi fugiat, consequuntur voluptatibus voluptatum voluptate modi quis explicabo. Provident quae reiciendis
                     ab perspiciatis!</div>
                 <div class="controlTabs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae cum pariatur! Odio dignissimos similique inventore eligendi fugiat, consequuntur voluptatibus voluptatum voluptate modi quis explicabo. Provident quae reiciendis
@@ -112,6 +197,37 @@
     </main>
 
     <footer>
+        <div class="container containerFooter">
+            <a href="#top">
+                <div class="footerLogo logo"></div>
+            </a>
+            <div class="footerTabs">
+                <span class="tabsText">Vahtang Ahtuang</span>
+                <span class="tabsText">Vahtang Ahtuang</span>
+                <span class="tabsText">Vahtang Ahtuang</span>
+                <span class="tabsText">Vahtang Ahtuang</span>
+            </div>
+            <div class="footerTabs">
+                <span class="tabsText">Vahtang Ahtuang</span>
+                <span class="tabsText">Vahtang Ahtuang</span>
+                <span class="tabsText">Vahtang Ahtuang</span>
+                <span class="tabsText">Vahtang Ahtuang</span>
+            </div>
+            <div class="footerContact">
+                <a href="!#">
+                    <div class="contactImg"></div>
+                </a>
+                <a href="!#">
+                    <div class="contactImg"></div>
+                </a>
+                <a href="!#">
+                    <div class="contactImg"></div>
+                </a>
+                <a href="!#">
+                    <div class="contactImg"></div>
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 
